# vision-bot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/core/: capture.cpp  capture.hpp  debug_view.cpp  debug_view.hpp  geometry.hpp  hsv.hpp  humanizer.cpp  humanizer.hpp  input.cpp  input.hpp  module.hpp  overlay_view.cpp  overlay_view.hpp  random.hpp  runner.cpp  runner.hpp  timing.hpp  watcher.cpp  watcher.hpp
src/mechanics/: slider.cpp  slider.hpp
src/profiles/: profile.hpp  profiles.cpp
